[package]
name = "backend"
version = "0.1.0"
authors = ["hskang9 <hskang9@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.9.0"
env_logger = "0.6"
futures = "0.1"
juniper = "0.13.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-web-prom = "0.1.2"
jsonwebtoken = "6"